--- a/BOJ/10162.md
+++ b/BOJ/10162.md
@@ -4,9 +4,13 @@
     * A : 5분 = 5*60초
     * B : 1분 = 1*60초
     * C : 10초
-    * A는 B로, B는 C로 대체 가능(배수 관계)
 * T초
-* 누른 횟수의 합 최소 -> 그리디?!
+* 누른 횟수의 합 최소
 * 시간 정확히 맞출 수 없는 경우 있음
 * A, B, C 횟수 차례대로 출력 (각각의 횟수 사이에 빈칸)
 * T초 맞출 수 없으면 -1 출력
+
+접근 방법
+-------------
+* 누른 횟수의 합 최소 -> 그리디?
+* 버튼 A는 B로, B는 C로 대체 가능 -> 그리디!
