modified the reason of the solution

--- a/BOJ/2720.md
+++ b/BOJ/2720.md
@@ -17,4 +17,9 @@
 접근 방법
 -------------
 * 손님이 받는 동전 개수 최소 -> 그리디?
-* 쿼터는 (다임, 니켈, 페니)로 다임은 (니켈, 페니)로 니켈은 페니로 대체 가능 -> 그리디!
+* 쿼터는 다음의 배수가 아님!
+* 쿼터($0.25) < 다임($0.10)의 배수 < 쿼터($0.25)와 다임($0.10)의 공배수 범위에서 다임($0.10)의 배수 체크
+    * $0.30 = 쿼터($0.25)*1개 + 니켈($0.05)*1개 -> 최소
+    * $0.40 = 쿼터($0.25)*1개 + 니켈($0.05)*3개 -> 최소
+* 쿼터는 (니켈, 페니)의 배수, 다임은 (니켈, 페니)의 배수, 니켈은 페니의 배수
+* 그리디!
