--- a/BOJ/2810.md
+++ b/BOJ/2810.md
@@ -24,3 +24,8 @@
     * 커플석이 나오기 전까지는 자리의 왼쪽 컵홀더 이용하고,
     * 이후에는 자리의 오른쪽 컵홀더를 이용하면
     * 모든 컵홀더가 이용 됨
+
+접근 방법2
+-------------
+* 컵홀더의 개수를 구함(LL의 개수를 구해야 함)
+* 사람의 수와 비교
