--- a/BOJ/10162.md
+++ b/BOJ/10162.md
@@ -1,16 +1,16 @@
-10162 ÀüÀÚ·¹ÀÎÁö
+10162 ì „ìžë ˆì¸ì§€
 =============
-* ¹öÆ°
-    * A : 5ºÐ = 5*60ÃÊ
-    * B : 1ºÐ = 1*60ÃÊ
-    * C : 10ÃÊ
-* TÃÊ
-* ´©¸¥ È½¼öÀÇ ÇÕ ÃÖ¼Ò
-* ½Ã°£ Á¤È®È÷ ¸ÂÃâ ¼ö ¾ø´Â °æ¿ì ÀÖÀ½
-* A, B, C È½¼ö Â÷·Ê´ë·Î Ãâ·Â (°¢°¢ÀÇ È½¼ö »çÀÌ¿¡ ºóÄ­)
-* TÃÊ ¸ÂÃâ ¼ö ¾øÀ¸¸é -1 Ãâ·Â
+* ë²„íŠ¼
+    * A : 5ë¶„ = 5*60ì´ˆ
+    * B : 1ë¶„ = 1*60ì´ˆ
+    * C : 10ì´ˆ
+* Tì´ˆ
+* ëˆ„ë¥¸ íšŸìˆ˜ì˜ í•© ìµœì†Œ
+* ì‹œê°„ ì •í™•ížˆ ë§žì¶œ ìˆ˜ ì—†ëŠ” ê²½ìš° ìžˆìŒ
+* A, B, C íšŸìˆ˜ ì°¨ë¡€ëŒ€ë¡œ ì¶œë ¥ (ê°ê°ì˜ íšŸìˆ˜ ì‚¬ì´ì— ë¹ˆì¹¸)
+* Tì´ˆ ë§žì¶œ ìˆ˜ ì—†ìœ¼ë©´ -1 ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* ´©¸¥ È½¼öÀÇ ÇÕ ÃÖ¼Ò -> ±×¸®µð?
-* ¹öÆ° A´Â (B, c)ÀÇ ¹è¼ö, B´Â CÀÇ ¹è¼ö -> ±×¸®µð!
+* ëˆ„ë¥¸ íšŸìˆ˜ì˜ í•© ìµœì†Œ -> ê·¸ë¦¬ë””?
+* ë²„íŠ¼ AëŠ” (B, c)ì˜ ë°°ìˆ˜, BëŠ” Cì˜ ë°°ìˆ˜ -> ê·¸ë¦¬ë””!
