--- a/BOJ/14920.md
+++ b/BOJ/14920.md
@@ -1,14 +1,14 @@
-14920 3n+1 ¼ö¿­
+14920 3n+1 ìˆ˜ì—´
 =============
-### ¹®Á¦
-* C(n+1) = C(n)/2     (C(n)ÀÌ Â¦¼öÀÏ ¶§)
-* C(n+1) = 3*C(n)+1   (C(n)ÀÌ È¦¼öÀÏ ¶§)
-* ÁÖ¾îÁø ÀÔ·Â C(1)¿¡ ´ëÇÏ¿© C(n)ÀÌ Ã³À½À¸·Î 1ÀÌµÇ´Â n Ãâ·Â
-### ÀÔ·Â
+### ë¬¸ì œ
+* C(n+1) = C(n)/2     (C(n)ì´ ì§ìˆ˜ì¼ ë•Œ)
+* C(n+1) = 3*C(n)+1   (C(n)ì´ í™€ìˆ˜ì¼ ë•Œ)
+* ì£¼ì–´ì§„ ìž…ë ¥ C(1)ì— ëŒ€í•˜ì—¬ C(n)ì´ ì²˜ìŒìœ¼ë¡œ 1ì´ë˜ëŠ” n ì¶œë ¥
+### ìž…ë ¥
 * C(1)   1<=C(1)<=100000
-### Ãâ·Â
-* C(n)ÀÌ Ã³À½À¸·Î 1ÀÌ µÇ´Â n
+### ì¶œë ¥
+* C(n)ì´ ì²˜ìŒìœ¼ë¡œ 1ì´ ë˜ëŠ” n
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* Á¡È­½Ä ¼öÇà -> ±¸Çö(½Ã¹Ä·¹ÀÌ¼Ç)!
+* ì í™”ì‹ ìˆ˜í–‰ -> êµ¬í˜„(ì‹œë®¬ë ˆì´ì…˜)!
