--- a/BOJ/16675.md
+++ b/BOJ/16675.md
@@ -1,18 +1,18 @@
-16675 µÎ °³ÀÇ ¼Õ
+16675 ë‘ ê°œì˜ ì†
 =============
-### ¹®Á¦
-* ¹Î¼ºÀÌ¿Í ÅÂ°æÀÌ µÑÀÌ µ¿½Ã¿¡ µÎ °³ÀÇ ¼ÕÀ» °¢°¢ °¡À§, ¹ÙÀ§, º¸ Áß ÇÏ³ª·Î ¼³Á¤
-* µ¿½Ã¿¡ ¿Þ¼ÕÀ» ³¾Áö ¿À¸¥¼ÕÀ» ³¾Áö °áÁ¤
-* µÑÀÇ ¿Þ¼Õ°ú ¿À¸¥¼ÕÀÇ »óÅÂ°¡ ÁÖ¾îÁ³À» ¶§, ¹Î¼ºÀÌ ¶Ç´Â ÅÂ°æÀÌ°¡ ÀûÀýÈ÷ ¿Þ¼Õ ¶Ç´Â ¿À¸¥¼ÕÀ» ¼±ÅÃÇÏ¿© °¡À§¹ÙÀ§º¸¿¡¼­ ¹«Á¶°Ç ÀÌ±â´Â ¹æ¹ýÀÌ ÀÖ´ÂÁö ¾ø´ÂÁö¸¦ ¾Ë·Á°í ÇÑ´Ù.
-### ÀÔ·Â
-* Ã¹ ¹øÂ° ÁÙ¿¡ ML, MR, TL, TRÀÌ °ø¹éÀ¸·Î ±¸ºÐµÇ¾î ÁÖ¾îÁø´Ù.
-* Â÷·Ê´ë·Î ¹Î¼ºÀÌÀÇ ¿Þ¼Õ°ú ¿À¸¥¼Õ, ÅÂ°æÀÌÀÇ ¿Þ¼Õ°ú ¿À¸¥¼ÕÀÇ »óÅÂ¸¦ ³ªÅ¸³½´Ù.
-* 4°³ÀÇ °ªµéÀº "S", "R", "P" Áß ÇÏ³ªÀÌ¸ç, °¢°¢ °¡À§, ¹ÙÀ§, º¸¸¦ ÀÇ¹Ì
-### Ãâ·Â
-* Ã¹ ¹øÂ° ÁÙ¿¡ ¹Î¼ºÀÌ°¡ ¹«Á¶°Ç ÀÌ±æ ¼ö ÀÖ´Ù¸é "MS",
-* ÅÂ°æÀÌ°¡ ¹«Á¶°Ç ÀÌ±æ ¼ö ÀÖ´Ù¸é "TK",
-* ´©°¡ ÀÌ±æ Áö È®´äÇÒ ¼ö ¾ø´Ù¸é "?"¸¦ ½Öµû¿ÈÇ¥¸¦ Á¦¿ÜÇÏ°í Ãâ·Â
+### ë¬¸ì œ
+* ë¯¼ì„±ì´ì™€ íƒœê²½ì´ ë‘˜ì´ ë™ì‹œì— ë‘ ê°œì˜ ì†ì„ ê°ê° ê°€ìœ„, ë°”ìœ„, ë³´ ì¤‘ í•˜ë‚˜ë¡œ ì„¤ì •
+* ë™ì‹œì— ì™¼ì†ì„ ë‚¼ì§€ ì˜¤ë¥¸ì†ì„ ë‚¼ì§€ ê²°ì •
+* ë‘˜ì˜ ì™¼ì†ê³¼ ì˜¤ë¥¸ì†ì˜ ìƒíƒœê°€ ì£¼ì–´ì¡Œì„ ë•Œ, ë¯¼ì„±ì´ ë˜ëŠ” íƒœê²½ì´ê°€ ì ì ˆížˆ ì™¼ì† ë˜ëŠ” ì˜¤ë¥¸ì†ì„ ì„ íƒí•˜ì—¬ ê°€ìœ„ë°”ìœ„ë³´ì—ì„œ ë¬´ì¡°ê±´ ì´ê¸°ëŠ” ë°©ë²•ì´ ìžˆëŠ”ì§€ ì—†ëŠ”ì§€ë¥¼ ì•Œë ¤ê³  í•œë‹¤.
+### ìž…ë ¥
+* ì²« ë²ˆì§¸ ì¤„ì— ML, MR, TL, TRì´ ê³µë°±ìœ¼ë¡œ êµ¬ë¶„ë˜ì–´ ì£¼ì–´ì§„ë‹¤.
+* ì°¨ë¡€ëŒ€ë¡œ ë¯¼ì„±ì´ì˜ ì™¼ì†ê³¼ ì˜¤ë¥¸ì†, íƒœê²½ì´ì˜ ì™¼ì†ê³¼ ì˜¤ë¥¸ì†ì˜ ìƒíƒœë¥¼ ë‚˜íƒ€ë‚¸ë‹¤.
+* 4ê°œì˜ ê°’ë“¤ì€ "S", "R", "P" ì¤‘ í•˜ë‚˜ì´ë©°, ê°ê° ê°€ìœ„, ë°”ìœ„, ë³´ë¥¼ ì˜ë¯¸
+### ì¶œë ¥
+* ì²« ë²ˆì§¸ ì¤„ì— ë¯¼ì„±ì´ê°€ ë¬´ì¡°ê±´ ì´ê¸¸ ìˆ˜ ìžˆë‹¤ë©´ "MS",
+* íƒœê²½ì´ê°€ ë¬´ì¡°ê±´ ì´ê¸¸ ìˆ˜ ìžˆë‹¤ë©´ "TK",
+* ëˆ„ê°€ ì´ê¸¸ ì§€ í™•ë‹µí•  ìˆ˜ ì—†ë‹¤ë©´ "?"ë¥¼ ìŒë”°ì˜´í‘œë¥¼ ì œì™¸í•˜ê³  ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* °ÔÀÓ ¹æ¹ý -> ±¸Çö(½Ã¹Ä·¹ÀÌ¼Ç)!
+* ê²Œìž„ ë°©ë²• -> êµ¬í˜„(ì‹œë®¬ë ˆì´ì…˜)!
