--- a/BOJ/5585.md
+++ b/BOJ/5585.md
@@ -1,15 +1,15 @@
-5585 °Å½º¸§µ·
+5585 ê±°ìŠ¤ë¦„ëˆ
 =============
-### ¹®Á¦
-* ÀÜµ· 500¿£, 100¿£, 50¿£, 10¿£, 5¿£, 1¿£
-* °Å½º¸§µ· °³¼ö°¡ °¡Àå Àû°Ô
-* 1000¿£À» ³ÂÀ» ¶§, ÀÜµ·ÀÇ °³¼ö
-### ÀÔ·Â
-* ÁöºÒÇÒ µ· (1ÀÌ»ó 1000¹Ì¸¸ÀÇ Á¤¼ö) 1°³, 1ÁÙ
-### Ãâ·Â
-* ÀÜµ·ÀÇ °³¼ö, 1Çà
+### ë¬¸ì œ
+* ìž”ëˆ 500ì—”, 100ì—”, 50ì—”, 10ì—”, 5ì—”, 1ì—”
+* ê±°ìŠ¤ë¦„ëˆ ê°œìˆ˜ê°€ ê°€ìž¥ ì ê²Œ
+* 1000ì—”ì„ ëƒˆì„ ë•Œ, ìž”ëˆì˜ ê°œìˆ˜
+### ìž…ë ¥
+* ì§€ë¶ˆí•  ëˆ (1ì´ìƒ 1000ë¯¸ë§Œì˜ ì •ìˆ˜) 1ê°œ, 1ì¤„
+### ì¶œë ¥
+* ìž”ëˆì˜ ê°œìˆ˜, 1í–‰
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* °³¼ö°¡ °¡Àå Àû°Ô -> ±×¸®µð!
-* 500Àº (100, 50, 10, 5, 1)ÀÇ ¹è¼ö, 100Àº (50, 10, 5, 1)ÀÇ ¹è¼ö, 50Àº (10, 5, 1)ÀÇ ¹è¼ö, 10Àº (5, 1)ÀÇ ¹è¼ö, 5´Â 1ÀÇ ¹è¼ö -> ±×¸®µð!
+* ê°œìˆ˜ê°€ ê°€ìž¥ ì ê²Œ -> ê·¸ë¦¬ë””!
+* 500ì€ (100, 50, 10, 5, 1)ì˜ ë°°ìˆ˜, 100ì€ (50, 10, 5, 1)ì˜ ë°°ìˆ˜, 50ì€ (10, 5, 1)ì˜ ë°°ìˆ˜, 10ì€ (5, 1)ì˜ ë°°ìˆ˜, 5ëŠ” 1ì˜ ë°°ìˆ˜ -> ê·¸ë¦¬ë””!
