--- a/BOJ/11034.md
+++ b/BOJ/11034.md
@@ -1,17 +1,17 @@
-11034 Ä»°Å·ç ¼¼¸¶¸®2
+11034 ìº¥ê±°ë£¨ ì„¸ë§ˆë¦¬2
 =============
-### ¹®Á¦
-* ¼öÁ÷¼± ÇÏ³ª, Ä»°Å·ç ¼¼ ¸¶¸® ¼­·Î ´Ù¸¥ ÇÑ ÁÂÇ¥ À§
-* ÇÑ ¹ø ¿òÁ÷ÀÏ ¶§, ¹Ù±ù ÂÊ µÎ Ä»°Å·ç Áß ÇÑ ¸¶¸®°¡ ´Ù¸¥ µÎ Ä»°Å·ç »çÀÌ Á¤¼ö ÁÂÇ¥·Î Á¡ÇÁ
-* ÇÑ ÁÂÇ¥ À§¿¡ ÀÖ´Â Ä»°Å·ç°¡ µÎ ¸¶¸® ÀÌ»óÀÏ ¼ö ¾øÀ½
-* Ä»°Å·ç´Â ÃÖ´ë ¸î ¹ø ¿òÁ÷ÀÏ ¼ö ÀÖÀ»±î?
-### ÀÔ·Â
-* ¿©·¯°³ÀÇ Å×½ºÆ® ÄÉÀÌ½º
-* ¼¼ Ä»°Å·çÀÇ ÃÊ±â À§Ä¡ A, B, C°¡ ÁÖ¾îÁü
-### Ãâ·Â
-* °¢ Å×½ºÆ®¿¡ ´ëÇØ Ä»°Å·ç°¡ ÃÖ´ë ¸î ¹ø ¿òÁ÷ÀÏ ¼ö ÀÖ´ÂÁö Ãâ·Â
+### ë¬¸ì œ
+* ìˆ˜ì§ì„  í•˜ë‚˜, ìº¥ê±°ë£¨ ì„¸ ë§ˆë¦¬ ì„œë¡œ ë‹¤ë¥¸ í•œ ì¢Œí‘œ ìœ„
+* í•œ ë²ˆ ì›€ì§ì¼ ë•Œ, ë°”ê¹¥ ìª½ ë‘ ìº¥ê±°ë£¨ ì¤‘ í•œ ë§ˆë¦¬ê°€ ë‹¤ë¥¸ ë‘ ìº¥ê±°ë£¨ ì‚¬ì´ ì •ìˆ˜ ì¢Œí‘œë¡œ ì í”„
+* í•œ ì¢Œí‘œ ìœ„ì— ìžˆëŠ” ìº¥ê±°ë£¨ê°€ ë‘ ë§ˆë¦¬ ì´ìƒì¼ ìˆ˜ ì—†ìŒ
+* ìº¥ê±°ë£¨ëŠ” ìµœëŒ€ ëª‡ ë²ˆ ì›€ì§ì¼ ìˆ˜ ìžˆì„ê¹Œ?
+### ìž…ë ¥
+* ì—¬ëŸ¬ê°œì˜ í…ŒìŠ¤íŠ¸ ì¼€ì´ìŠ¤
+* ì„¸ ìº¥ê±°ë£¨ì˜ ì´ˆê¸° ìœ„ì¹˜ A, B, Cê°€ ì£¼ì–´ì§
+### ì¶œë ¥
+* ê° í…ŒìŠ¤íŠ¸ì— ëŒ€í•´ ìº¥ê±°ë£¨ê°€ ìµœëŒ€ ëª‡ ë²ˆ ì›€ì§ì¼ ìˆ˜ ìžˆëŠ”ì§€ ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* ÃÖ´ë ¸î ¹ø ¿òÁ÷ÀÏ ¼ö ÀÖÀ»±î? -> ±×¸®µð?!
-* ÇöÀç »óÈ²¿¡¼­ °¡Àå Á¶±Ý¾¿ Á¼Çô°¡¾ß ÇÔ
+* ìµœëŒ€ ëª‡ ë²ˆ ì›€ì§ì¼ ìˆ˜ ìžˆì„ê¹Œ? -> ê·¸ë¦¬ë””?!
+* í˜„ìž¬ ìƒí™©ì—ì„œ ê°€ìž¥ ì¡°ê¸ˆì”© ì¢í˜€ê°€ì•¼ í•¨
