--- a/BOJ/13698.md
+++ b/BOJ/13698.md
@@ -1,21 +1,21 @@
 13698 Hawk eyes
 =============
-### ¹®Á¦
-* ÄÅ ³× °³¸¦ ÀÏ·Ä·Î Å¹ÀÚ À§¿¡ ¿Ã·Á³õ°í
-* °¡Àå ¿ÞÂÊ ÄÅ¿¡ ÀÛÀº °ø ÇÏ³ª, °¡Àå ¿À¸¥ÂÊ ÄÅ¿¡ Å« °ø ÇÏ³ª¸¦ ³Ö¾î³õ¾Ò´Ù.
-* ÄÅ 2°³ÀÇ À§Ä¡¸¦ ¹Ù²ã°¡¸é¼­ ¿©·¯ ¹ø ¼¯À» °ÍÀÌ°í,
-* ¸ðµÎ ¼¯Àº µÚ¿¡ »ó´ë¹æ¿¡°Ô ¾î¶² ÄÅ¿¡ °øÀÌ µé¾îÀÖ´ÂÁö ¸»ÇÏ¶ó°í ÇÒ °ÍÀÌ´Ù.
-* ÄÅÀÌ 4°³°¡ ÀÖÀ» ¶§, À§Ä¡¸¦ ¹Ù²Ü ¼ö ÀÖ´Â °¡´ÉÇÑ ¹æ¹ýÀº 6°¡Áö(A(1<->2), B(1<->3), C(1<->4), D(2<->3), E(2<->4), F(3<->4))°¡ ÀÖ´Ù.
-* Àç¿­ÀÌ°¡ ÄÅÀ» ¼¯Àº ¹æ¹ýÀÌ ¼ø¼­´ë·Î ÁÖ¾îÁú ¶§,
-* ¾î¶² ÄÅ¿¡ ÀÛÀº °øÀÌ ÀÖ´ÂÁö, ¾î¶² ÄÅ¿¡ Å« °øÀÌ ÀÖ´ÂÁö Â÷·Ê´ë·Î Ãâ·ÂÇÏ´Â ÇÁ·Î±×·¥
-### ÀÔ·Â
-* Ã¹Â° ÁÙ¿¡ Àç¿­ÀÌ°¡ ÄÅÀ» ¼¯´Â ¼ø¼­°¡ ÁÖ¾îÁø´Ù.
-* ¼ø¼­´Â A, B, C, D, E, F Áß ÇÏ³ª
-* Àç¿­ÀÌ´Â ÄÅÀ» ÃÖ´ë 200¹ø ¼¯´Â´Ù.
-### Ãâ·Â
-* Ã¹ ¹øÂ° ÁÙ¿¡ ÀÛÀº °øÀÌ ÀÖ´Â À§Ä¡¸¦, µÎ ¹øÂ° ÁÙ¿¡ Å« °øÀÌ ÀÖ´Â À§Ä¡ Ãâ·Â
-* °øÀÇ À§Ä¡´Â °¡Àå ¿ÞÂÊºÎÅÍ 1, 2, 3, 4·Î Ç¥½Ã
+### ë¬¸ì œ
+* ì»µ ë„¤ ê°œë¥¼ ì¼ë ¬ë¡œ íƒìž ìœ„ì— ì˜¬ë ¤ë†“ê³ 
+* ê°€ìž¥ ì™¼ìª½ ì»µì— ìž‘ì€ ê³µ í•˜ë‚˜, ê°€ìž¥ ì˜¤ë¥¸ìª½ ì»µì— í° ê³µ í•˜ë‚˜ë¥¼ ë„£ì–´ë†“ì•˜ë‹¤.
+* ì»µ 2ê°œì˜ ìœ„ì¹˜ë¥¼ ë°”ê¿”ê°€ë©´ì„œ ì—¬ëŸ¬ ë²ˆ ì„žì„ ê²ƒì´ê³ ,
+* ëª¨ë‘ ì„žì€ ë’¤ì— ìƒëŒ€ë°©ì—ê²Œ ì–´ë–¤ ì»µì— ê³µì´ ë“¤ì–´ìžˆëŠ”ì§€ ë§í•˜ë¼ê³  í•  ê²ƒì´ë‹¤.
+* ì»µì´ 4ê°œê°€ ìžˆì„ ë•Œ, ìœ„ì¹˜ë¥¼ ë°”ê¿€ ìˆ˜ ìžˆëŠ” ê°€ëŠ¥í•œ ë°©ë²•ì€ 6ê°€ì§€(A(1<->2), B(1<->3), C(1<->4), D(2<->3), E(2<->4), F(3<->4))ê°€ ìžˆë‹¤.
+* ìž¬ì—´ì´ê°€ ì»µì„ ì„žì€ ë°©ë²•ì´ ìˆœì„œëŒ€ë¡œ ì£¼ì–´ì§ˆ ë•Œ,
+* ì–´ë–¤ ì»µì— ìž‘ì€ ê³µì´ ìžˆëŠ”ì§€, ì–´ë–¤ ì»µì— í° ê³µì´ ìžˆëŠ”ì§€ ì°¨ë¡€ëŒ€ë¡œ ì¶œë ¥í•˜ëŠ” í”„ë¡œê·¸ëž¨
+### ìž…ë ¥
+* ì²«ì§¸ ì¤„ì— ìž¬ì—´ì´ê°€ ì»µì„ ì„žëŠ” ìˆœì„œê°€ ì£¼ì–´ì§„ë‹¤.
+* ìˆœì„œëŠ” A, B, C, D, E, F ì¤‘ í•˜ë‚˜
+* ìž¬ì—´ì´ëŠ” ì»µì„ ìµœëŒ€ 200ë²ˆ ì„žëŠ”ë‹¤.
+### ì¶œë ¥
+* ì²« ë²ˆì§¸ ì¤„ì— ìž‘ì€ ê³µì´ ìžˆëŠ” ìœ„ì¹˜ë¥¼, ë‘ ë²ˆì§¸ ì¤„ì— í° ê³µì´ ìžˆëŠ” ìœ„ì¹˜ ì¶œë ¥
+* ê³µì˜ ìœ„ì¹˜ëŠ” ê°€ìž¥ ì™¼ìª½ë¶€í„° 1, 2, 3, 4ë¡œ í‘œì‹œ
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* °ÔÀÓ ¹æ¹ý -> ±¸Çö(½Ã¹Ä·¹ÀÌ¼Ç)!
+* ê²Œìž„ ë°©ë²• -> êµ¬í˜„(ì‹œë®¬ë ˆì´ì…˜)!
