--- a/BOJ/2310.md
+++ b/BOJ/2310.md
@@ -1,25 +1,25 @@
-2310 ¾îµåº¥Ã³ °ÔÀÓ
+2310 ì–´ë“œë²¤ì²˜ ê²Œìž„
 =============
-### ¹®Á¦
-* 1ºÎÅÍ n±îÁö ¹øÈ£°¡ ºÙÀº ¹æÀ» Áö³ª°¡¾ß ÇÑ´Ù.
-* °¢ ¹æ ¾È¿¡´Â ¹øÈ£°¡ ºÙÀº ¹®ÀÌ ÀÖÀ» ¼ö ÀÖ°í, °¢ ¹®Àº ÇØ´çÇÏ´Â ¹øÈ£ÀÇ ¹æÀ¸·Î ÅëÇÑ´Ù.
-* ¹æ ¾È¿¡´Â ·¹ÇÁ¸®ÄÜÀÌ³ª Æ®·ÑÀÌ ÀÖÀ» ¼ö ÀÖ´Ù.
-* ·¹ÇÁ¸®ÄÜÀÌ ÀÖ´Â ¹æ¿¡ µé¾î°¡¸é ·¹ÇÁ¸®ÄÜÀº ¸ðÇè°¡ÀÇ ¼ÒÁö±ÝÀÌ ÀÏÁ¤·® ¹Ì¸¸ÀÏ ¶§¿¡´Â ±×¸¸ÇÑ ¾çÀÌ µÇµµ·Ï ±ÝÈ­¸¦ Ã¤¿öÁÖ°í, ¼ÒÁö±ÝÀÌ ÀÏÁ¤·® ÀÌ»óÀÏ ¶§¿¡´Â ±×´ë·Î µÐ´Ù.
-* Æ®·ÑÀÌ ÀÖ´Â ¹æ¿¡ µé¾î°¡·Á¸é ÀÏÁ¤·®ÀÇ ÅëÇà·á¸¦ ÁöºÒÇØ¾ß ÇÑ´Ù.
-* ¸ðÇè°¡°¡ 1¹ø ¹æ¿¡¼­ ½ÃÀÛÇÏ·Á ÇÒ ¶§¿¡µµ ¸¶Âù°¡ÁöÀÌ´Ù.
-* ¸ðÇè°¡´Â ¼ÒÁö±ÝÀÌ 0ÀÎ »óÅÂ¿¡¼­ Ãâ¹ßÇÑ´Ù.
-### ÀÔ·Â
-* ¿©·¯ °³ÀÇ ¹Ì·Î·Î ÁÖ¾îÁø´Ù.
-* °¢ ¹Ì·ÎÀÇ Ã¹ ÁÙ¿¡ ¹Ì·ÎÀÇ ¹æ ¼ö¸¦ ³ªÅ¸³»´Â Á¤¼ö n(1 <= n <= 1000)ÀÌ ÁÖ¾îÁø´Ù.
-* ´ÙÀ½ nÁÙ¿¡ °¢ ¹æÀÇ Á¤º¸°¡ ÁÖ¾îÁø´Ù.
-* °¢ ¹æÀÇ Á¤º¸´Â ¹æÀÇ ³»¿ë¹°À» ³ªÅ¸³»´Â ¾ËÆÄºª ÇÏ³ª(E: ºó ¹æ, L: ·¹ÇÁ¸®ÄÜ, T: Æ®·Ñ)¿Í ±× ¹æÀÇ ·¹ÇÁ¸®ÄÜÀÌ³ª Æ®·ÑÀÌ Á¤ÇØ³õÀº ±Ý¾×(ºó ¹æÀÏ °æ¿ì 0ÀÌ°í, ±Ý¾×Àº 500º¸´Ù ÀÛ°Å³ª °°Àº ÀÚ¿¬¼ö), ±×¸®°í ±× ¹æ¿¡¼­ ´Ù¸¥ ¹æÀ¸·Î °¥ ¼ö ÀÖ´Â ¹®ÀÇ ¹øÈ£µé·Î ÀÌ·ç¾îÁø´Ù.
-* °¢ ÁÙÀº 0À¸·Î ³¡³­´Ù.
-* ¹Ì·ÎÀÇ ¹æ ¼ö°¡ 0°³ÀÎ ÀÔ·ÂÀÌ µé¾î¿À¸é ÀÔ·ÂÀ» Á¾·áÇÑ´Ù.
-### Ãâ·Â
-* Ãâ·ÂÀº °¢ ¹Ì·Î¸¶´Ù ÇÑ ÁÙ¾¿À¸·Î ÀÌ·ç¾îÁø´Ù.
-* °¢ ÁÙ¿¡´Â 1¹ø ¹æ¿¡¼­ n¹ø ¹æ±îÁö °¥ ¼ö ÀÖ´ÂÁö¸¦ 'Yes' ¶Ç´Â 'No'·Î Ãâ·Â
+### ë¬¸ì œ
+* 1ë¶€í„° nê¹Œì§€ ë²ˆí˜¸ê°€ ë¶™ì€ ë°©ì„ ì§€ë‚˜ê°€ì•¼ í•œë‹¤.
+* ê° ë°© ì•ˆì—ëŠ” ë²ˆí˜¸ê°€ ë¶™ì€ ë¬¸ì´ ìžˆì„ ìˆ˜ ìžˆê³ , ê° ë¬¸ì€ í•´ë‹¹í•˜ëŠ” ë²ˆí˜¸ì˜ ë°©ìœ¼ë¡œ í†µí•œë‹¤.
+* ë°© ì•ˆì—ëŠ” ë ˆí”„ë¦¬ì½˜ì´ë‚˜ íŠ¸ë¡¤ì´ ìžˆì„ ìˆ˜ ìžˆë‹¤.
+* ë ˆí”„ë¦¬ì½˜ì´ ìžˆëŠ” ë°©ì— ë“¤ì–´ê°€ë©´ ë ˆí”„ë¦¬ì½˜ì€ ëª¨í—˜ê°€ì˜ ì†Œì§€ê¸ˆì´ ì¼ì •ëŸ‰ ë¯¸ë§Œì¼ ë•Œì—ëŠ” ê·¸ë§Œí•œ ì–‘ì´ ë˜ë„ë¡ ê¸ˆí™”ë¥¼ ì±„ì›Œì£¼ê³ , ì†Œì§€ê¸ˆì´ ì¼ì •ëŸ‰ ì´ìƒì¼ ë•Œì—ëŠ” ê·¸ëŒ€ë¡œ ë‘”ë‹¤.
+* íŠ¸ë¡¤ì´ ìžˆëŠ” ë°©ì— ë“¤ì–´ê°€ë ¤ë©´ ì¼ì •ëŸ‰ì˜ í†µí–‰ë£Œë¥¼ ì§€ë¶ˆí•´ì•¼ í•œë‹¤.
+* ëª¨í—˜ê°€ê°€ 1ë²ˆ ë°©ì—ì„œ ì‹œìž‘í•˜ë ¤ í•  ë•Œì—ë„ ë§ˆì°¬ê°€ì§€ì´ë‹¤.
+* ëª¨í—˜ê°€ëŠ” ì†Œì§€ê¸ˆì´ 0ì¸ ìƒíƒœì—ì„œ ì¶œë°œí•œë‹¤.
+### ìž…ë ¥
+* ì—¬ëŸ¬ ê°œì˜ ë¯¸ë¡œë¡œ ì£¼ì–´ì§„ë‹¤.
+* ê° ë¯¸ë¡œì˜ ì²« ì¤„ì— ë¯¸ë¡œì˜ ë°© ìˆ˜ë¥¼ ë‚˜íƒ€ë‚´ëŠ” ì •ìˆ˜ n(1 <= n <= 1000)ì´ ì£¼ì–´ì§„ë‹¤.
+* ë‹¤ìŒ nì¤„ì— ê° ë°©ì˜ ì •ë³´ê°€ ì£¼ì–´ì§„ë‹¤.
+* ê° ë°©ì˜ ì •ë³´ëŠ” ë°©ì˜ ë‚´ìš©ë¬¼ì„ ë‚˜íƒ€ë‚´ëŠ” ì•ŒíŒŒë²³ í•˜ë‚˜(E: ë¹ˆ ë°©, L: ë ˆí”„ë¦¬ì½˜, T: íŠ¸ë¡¤)ì™€ ê·¸ ë°©ì˜ ë ˆí”„ë¦¬ì½˜ì´ë‚˜ íŠ¸ë¡¤ì´ ì •í•´ë†“ì€ ê¸ˆì•¡(ë¹ˆ ë°©ì¼ ê²½ìš° 0ì´ê³ , ê¸ˆì•¡ì€ 500ë³´ë‹¤ ìž‘ê±°ë‚˜ ê°™ì€ ìžì—°ìˆ˜), ê·¸ë¦¬ê³  ê·¸ ë°©ì—ì„œ ë‹¤ë¥¸ ë°©ìœ¼ë¡œ ê°ˆ ìˆ˜ ìžˆëŠ” ë¬¸ì˜ ë²ˆí˜¸ë“¤ë¡œ ì´ë£¨ì–´ì§„ë‹¤.
+* ê° ì¤„ì€ 0ìœ¼ë¡œ ëë‚œë‹¤.
+* ë¯¸ë¡œì˜ ë°© ìˆ˜ê°€ 0ê°œì¸ ìž…ë ¥ì´ ë“¤ì–´ì˜¤ë©´ ìž…ë ¥ì„ ì¢…ë£Œí•œë‹¤.
+### ì¶œë ¥
+* ì¶œë ¥ì€ ê° ë¯¸ë¡œë§ˆë‹¤ í•œ ì¤„ì”©ìœ¼ë¡œ ì´ë£¨ì–´ì§„ë‹¤.
+* ê° ì¤„ì—ëŠ” 1ë²ˆ ë°©ì—ì„œ në²ˆ ë°©ê¹Œì§€ ê°ˆ ìˆ˜ ìžˆëŠ”ì§€ë¥¼ 'Yes' ë˜ëŠ” 'No'ë¡œ ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* 2Â÷¿ø ¹è¿­ -> DFS/BFS?
-* Å½»ö¹®Á¦ -> DFS/BFS!
+* 2ì°¨ì› ë°°ì—´ -> DFS/BFS?
+* íƒìƒ‰ë¬¸ì œ -> DFS/BFS!
