--- a/BOJ/2720.md
+++ b/BOJ/2720.md
@@ -1,25 +1,25 @@
-2720 ¼¼Å¹¼Ò »çÀå µ¿Çõ
+2720 ì„¸íƒì†Œ ì‚¬ìž¥ ë™í˜
 =============
-### ¹®Á¦
-* °Å½º¸§µ· ¾×¼ö <= $5.00
-* ÄõÅÍ(Quarter, $0.25) °³¼ö
-* ´ÙÀÓ(Dime, $0.10) °³¼ö
-* ´ÏÄÌ(Nickel, $0.05) °³¼ö
-* Æä´Ï(Penny, $0.01) °³¼ö
-* ¼Õ´ÔÀÌ ¹Þ´Â µ¿Àü °³¼ö ÃÖ¼Ò
-### ÀÔ·Â
-* Ã¹Â°ÁÙ¿¡ Å×½ºÆ® ÄÉÀÌ½º °³¼ö T
-* °¢ Å×½ºÆ® ÄÉÀÌ½º´Â °Å½º¸§µ· C¸¦ ³ªÅ¸³»´Â Á¤¼ö ÇÏ³ª
-* CÀÇ ´ÜÀ§´Â ¼¾Æ® (1´Þ·¯ = 100¼¾Æ®)
-### Ãâ·Â
-* °¢ Å×½ºÆ® ÄÉÀÌ½º¿¡ ´ëÇØ ÇÊ¿äÇÑ ÄõÅÍ, ´ÙÀÓ, ´ÏÄÌ, Æä´Ï °³¼ö¸¦ °ø¹éÀ¸·Î ±¸ºÐÇÏ¿© Ãâ·Â
+### ë¬¸ì œ
+* ê±°ìŠ¤ë¦„ëˆ ì•¡ìˆ˜ <= $5.00
+* ì¿¼í„°(Quarter, $0.25) ê°œìˆ˜
+* ë‹¤ìž„(Dime, $0.10) ê°œìˆ˜
+* ë‹ˆì¼ˆ(Nickel, $0.05) ê°œìˆ˜
+* íŽ˜ë‹ˆ(Penny, $0.01) ê°œìˆ˜
+* ì†ë‹˜ì´ ë°›ëŠ” ë™ì „ ê°œìˆ˜ ìµœì†Œ
+### ìž…ë ¥
+* ì²«ì§¸ì¤„ì— í…ŒìŠ¤íŠ¸ ì¼€ì´ìŠ¤ ê°œìˆ˜ T
+* ê° í…ŒìŠ¤íŠ¸ ì¼€ì´ìŠ¤ëŠ” ê±°ìŠ¤ë¦„ëˆ Cë¥¼ ë‚˜íƒ€ë‚´ëŠ” ì •ìˆ˜ í•˜ë‚˜
+* Cì˜ ë‹¨ìœ„ëŠ” ì„¼íŠ¸ (1ë‹¬ëŸ¬ = 100ì„¼íŠ¸)
+### ì¶œë ¥
+* ê° í…ŒìŠ¤íŠ¸ ì¼€ì´ìŠ¤ì— ëŒ€í•´ í•„ìš”í•œ ì¿¼í„°, ë‹¤ìž„, ë‹ˆì¼ˆ, íŽ˜ë‹ˆ ê°œìˆ˜ë¥¼ ê³µë°±ìœ¼ë¡œ êµ¬ë¶„í•˜ì—¬ ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* ¼Õ´ÔÀÌ ¹Þ´Â µ¿Àü °³¼ö ÃÖ¼Ò -> ±×¸®µð?
-* ÄõÅÍ´Â ´ÙÀ½ÀÇ ¹è¼ö°¡ ¾Æ´Ô!
-* ÄõÅÍ($0.25) < ´ÙÀÓ($0.10)ÀÇ ¹è¼ö < ÄõÅÍ($0.25)¿Í ´ÙÀÓ($0.10)ÀÇ °ø¹è¼ö ¹üÀ§¿¡¼­ ´ÙÀÓ($0.10)ÀÇ ¹è¼ö Ã¼Å©
-    * $0.30 = ÄõÅÍ($0.25)*1°³ + ´ÏÄÌ($0.05)*1°³ -> ÃÖ¼Ò
-    * $0.40 = ÄõÅÍ($0.25)*1°³ + ´ÏÄÌ($0.05)*3°³ -> ÃÖ¼Ò
-* ÄõÅÍ´Â (´ÏÄÌ, Æä´Ï)ÀÇ ¹è¼ö, ´ÙÀÓÀº (´ÏÄÌ, Æä´Ï)ÀÇ ¹è¼ö, ´ÏÄÌÀº Æä´ÏÀÇ ¹è¼ö
-* ±×¸®µð!
+* ì†ë‹˜ì´ ë°›ëŠ” ë™ì „ ê°œìˆ˜ ìµœì†Œ -> ê·¸ë¦¬ë””?
+* ì¿¼í„°ëŠ” ë‹¤ìŒì˜ ë°°ìˆ˜ê°€ ì•„ë‹˜!
+* ì¿¼í„°($0.25) < ë‹¤ìž„($0.10)ì˜ ë°°ìˆ˜ < ì¿¼í„°($0.25)ì™€ ë‹¤ìž„($0.10)ì˜ ê³µë°°ìˆ˜ ë²”ìœ„ì—ì„œ ë‹¤ìž„($0.10)ì˜ ë°°ìˆ˜ ì²´í¬
+    * $0.30 = ì¿¼í„°($0.25)*1ê°œ + ë‹ˆì¼ˆ($0.05)*1ê°œ -> ìµœì†Œ
+    * $0.40 = ì¿¼í„°($0.25)*1ê°œ + ë‹ˆì¼ˆ($0.05)*3ê°œ -> ìµœì†Œ
+* ì¿¼í„°ëŠ” (ë‹ˆì¼ˆ, íŽ˜ë‹ˆ)ì˜ ë°°ìˆ˜, ë‹¤ìž„ì€ (ë‹ˆì¼ˆ, íŽ˜ë‹ˆ)ì˜ ë°°ìˆ˜, ë‹ˆì¼ˆì€ íŽ˜ë‹ˆì˜ ë°°ìˆ˜
+* ê·¸ë¦¬ë””!
