--- a/BOJ/9517.md
+++ b/BOJ/9517.md
@@ -1,23 +1,23 @@
-9517 ¾ÆÀÌ ·¯ºê Å©·Î¾ÆÆ¼¾Æ
+9517 ì•„ì´ ëŸ¬ë¸Œ í¬ë¡œì•„í‹°ì•„
 =============
-### ¹®Á¦
-* ÇÃ·¹ÀÌ¾î 8¸íÀÌ ¿øÀ» ÀÌ·ç¾î¼­ ¾É¾ÆÀÖ´Ù.
-* ÇÑ »ç¶÷Àº °ÔÀÓÀÌ ½ÃÀÛÇÑÁö 3ºÐ 30ÃÊ°¡ Áö³ª¸é ÅÍÁö´Â ÆøÅºÀ» µé°íÀÖÀ½
-* ÆøÅºÀ» µé°íÀÖ´Â »ç¶÷¿¡°Ô Áú¹®À» ÇÏ¸é¼­ °ÔÀÓ ½ÃÀÛ
-* ¾î¶² ¹®Á¦ÀÇ Á¤´äÀ» ¸ÂÃßÁö ¸øÇÑ °æ¿ì³ª, ¹®Á¦¸¦ ½ºÅµÇÑ °æ¿ì¿¡´Â Áï½Ã ´ÙÀ½ ¹®Á¦¸¦ ¹Þ°Ô µÊ
-* Á¤´äÀ» ¸ÂÃá °æ¿ì ÆøÅºÀ» ¹Ù·Î ¿ÞÂÊ¿¡ ÀÖ´Â ÇÃ·¹ÀÌ¾î¿¡°Ô ³Ñ°ÜÁÜ
-* ³Ñ°Ü¹ÞÀº ÇÃ·¹ÀÌ¾î¿¡°Ô ´ÙÀ½ Áú¹®ÀÌ ³ª°¨
-* °ÔÀÓÀÌ ½ÃÀÛÇßÀ» ¶§ ÆøÅºÀ» µé°íÀÖ´Â »ç¶÷ÀÇ ¹øÈ£¿Í Ã³À½ N°³ÀÇ Áú¹®À» ´ë´äÇÒ ¶§±îÁö °É¸° ½Ã°£ÀÌ ÁÖ¾îÁø´Ù. ÀÌ ¶§, ÆøÅºÀ» ÅÍ¶ß¸° »ç¶÷ÀÇ ¹øÈ£¸¦ ±¸ÇÏ´Â ÇÁ·Î±×·¥
-* °¢ »ç¶÷ÀÌ Áú¹®À» µè°í ´ë´äÇÒ ¶§±îÁö °É¸° ½Ã°£°ú, ±× »ç¶÷ÀÇ ´ë´äÀÌ ¸Â¾Ò´ÂÁö(T), Æ²·È´ÂÁö(N), ½ºÅµÇß´ÂÁö(P)°¡ ÁÖ¾îÁø´Ù.
-* Á¤´äÀ» ¸»ÇÏ´Â ½Ã°£, Áú¹®À» µè´Â ½Ã°£, ¹Ú½º¸¦ Àü´ÞÇÏ´Â ½Ã°£Àº ¸ðµÎ 0ÀÌ¶ó°í °¡Á¤
-* Ç×»ó »ç¶÷ÀÌ ÆøÅºÀ» µé°íÀÖ¾úÀ» ¶§ ÅÍÁö´Â ÀÔ·Â¸¸ ÁÖ¾îÁü
-### ÀÔ·Â
-* Ã¹Â° ÁÙ¿¡ °ÔÀÓÀÌ ½ÃÀÛÇßÀ» ¶§ ÆøÅºÀ» µé°íÀÖ´Â »ç¶÷ÀÇ ¹øÈ£ K(1 <= K <= 8)°¡ ÁÖ¾îÁü
-* µÑ¤Š ÁÙ¿¡ Áú¹®ÀÇ °³¼ö N(1 <= N <= 100)ÀÌ ÁÖ¾îÁü
-* ´ÙÀ½ N°³ÀÇ ÁÙ¿¡ i¹øÂ° Áú¹®À» ´ë´äÇÏ±â±îÁö °É¸° ½Ã°£(´ÜÀ§:ÃÊ)T(1 <= T <= 100), ±× ÇÃ·¹ÀÌ¾îÀÇ ´ë´ä Z(T, N, PÁß ÇÏ³ª)°¡ ÁÖ¾îÁü
-### Ãâ·Â
-* ÆøÅºÀ» ÅÍ¶ß¸° »ç¶÷ÀÇ ¹øÈ£ Ãâ·Â
+### ë¬¸ì œ
+* í”Œë ˆì´ì–´ 8ëª…ì´ ì›ì„ ì´ë£¨ì–´ì„œ ì•‰ì•„ìžˆë‹¤.
+* í•œ ì‚¬ëžŒì€ ê²Œìž„ì´ ì‹œìž‘í•œì§€ 3ë¶„ 30ì´ˆê°€ ì§€ë‚˜ë©´ í„°ì§€ëŠ” í­íƒ„ì„ ë“¤ê³ ìžˆìŒ
+* í­íƒ„ì„ ë“¤ê³ ìžˆëŠ” ì‚¬ëžŒì—ê²Œ ì§ˆë¬¸ì„ í•˜ë©´ì„œ ê²Œìž„ ì‹œìž‘
+* ì–´ë–¤ ë¬¸ì œì˜ ì •ë‹µì„ ë§žì¶”ì§€ ëª»í•œ ê²½ìš°ë‚˜, ë¬¸ì œë¥¼ ìŠ¤í‚µí•œ ê²½ìš°ì—ëŠ” ì¦‰ì‹œ ë‹¤ìŒ ë¬¸ì œë¥¼ ë°›ê²Œ ë¨
+* ì •ë‹µì„ ë§žì¶˜ ê²½ìš° í­íƒ„ì„ ë°”ë¡œ ì™¼ìª½ì— ìžˆëŠ” í”Œë ˆì´ì–´ì—ê²Œ ë„˜ê²¨ì¤Œ
+* ë„˜ê²¨ë°›ì€ í”Œë ˆì´ì–´ì—ê²Œ ë‹¤ìŒ ì§ˆë¬¸ì´ ë‚˜ê°
+* ê²Œìž„ì´ ì‹œìž‘í–ˆì„ ë•Œ í­íƒ„ì„ ë“¤ê³ ìžˆëŠ” ì‚¬ëžŒì˜ ë²ˆí˜¸ì™€ ì²˜ìŒ Nê°œì˜ ì§ˆë¬¸ì„ ëŒ€ë‹µí•  ë•Œê¹Œì§€ ê±¸ë¦° ì‹œê°„ì´ ì£¼ì–´ì§„ë‹¤. ì´ ë•Œ, í­íƒ„ì„ í„°ëœ¨ë¦° ì‚¬ëžŒì˜ ë²ˆí˜¸ë¥¼ êµ¬í•˜ëŠ” í”„ë¡œê·¸ëž¨
+* ê° ì‚¬ëžŒì´ ì§ˆë¬¸ì„ ë“£ê³  ëŒ€ë‹µí•  ë•Œê¹Œì§€ ê±¸ë¦° ì‹œê°„ê³¼, ê·¸ ì‚¬ëžŒì˜ ëŒ€ë‹µì´ ë§žì•˜ëŠ”ì§€(T), í‹€ë ¸ëŠ”ì§€(N), ìŠ¤í‚µí–ˆëŠ”ì§€(P)ê°€ ì£¼ì–´ì§„ë‹¤.
+* ì •ë‹µì„ ë§í•˜ëŠ” ì‹œê°„, ì§ˆë¬¸ì„ ë“£ëŠ” ì‹œê°„, ë°•ìŠ¤ë¥¼ ì „ë‹¬í•˜ëŠ” ì‹œê°„ì€ ëª¨ë‘ 0ì´ë¼ê³  ê°€ì •
+* í•­ìƒ ì‚¬ëžŒì´ í­íƒ„ì„ ë“¤ê³ ìžˆì—ˆì„ ë•Œ í„°ì§€ëŠ” ìž…ë ¥ë§Œ ì£¼ì–´ì§
+### ìž…ë ¥
+* ì²«ì§¸ ì¤„ì— ê²Œìž„ì´ ì‹œìž‘í–ˆì„ ë•Œ í­íƒ„ì„ ë“¤ê³ ìžˆëŠ” ì‚¬ëžŒì˜ ë²ˆí˜¸ K(1 <= K <= 8)ê°€ ì£¼ì–´ì§
+* ë‘˜ì¨° ì¤„ì— ì§ˆë¬¸ì˜ ê°œìˆ˜ N(1 <= N <= 100)ì´ ì£¼ì–´ì§
+* ë‹¤ìŒ Nê°œì˜ ì¤„ì— ië²ˆì§¸ ì§ˆë¬¸ì„ ëŒ€ë‹µí•˜ê¸°ê¹Œì§€ ê±¸ë¦° ì‹œê°„(ë‹¨ìœ„:ì´ˆ)T(1 <= T <= 100), ê·¸ í”Œë ˆì´ì–´ì˜ ëŒ€ë‹µ Z(T, N, Pì¤‘ í•˜ë‚˜)ê°€ ì£¼ì–´ì§
+### ì¶œë ¥
+* í­íƒ„ì„ í„°ëœ¨ë¦° ì‚¬ëžŒì˜ ë²ˆí˜¸ ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* °ÔÀÓ ¹æ¹ý -> ±¸Çö(½Ã¹Ä·¹ÀÌ¼Ç)!
+* ê²Œìž„ ë°©ë²• -> êµ¬í˜„(ì‹œë®¬ë ˆì´ì…˜)!
