--- a/BOJ/13706.md
+++ b/BOJ/13706.md
@@ -1,13 +1,13 @@
-13706 Á¦°ö±Ù
+13706 ì œê³±ê·¼
 =============
-### ¹®Á¦
-* Á¤¼ö NÀÌ ÁÖ¾îÁ³À» ¶§, NÀÇ Á¦°ö±ÙÀ» ±¸ÇÏ´Â ÇÁ·Î±×·¥
-### ÀÔ·Â
-* Ã¹Â° ÁÙ¿¡ ¾çÀÇ Á¤¼ö NÀÌ ÁÖ¾îÁø´Ù.
-* Á¤¼ö NÀÇ Á¦°ö±ÙÀº Ç×»ó Á¤¼öÀÌ¸ç, NÀÇ ±æÀÌ´Â 830ÀÚ¸®¸¦ ³ÑÁö ¾Ê´Â´Ù.
-### Ãâ·Â
-* Ã¹Â° ÁÙ¿¡ Á¤¼ö NÀÇ Á¦°ö±Ù Ãâ·Â
+### ë¬¸ì œ
+* ì •ìˆ˜ Nì´ ì£¼ì–´ì¡Œì„ ë•Œ, Nì˜ ì œê³±ê·¼ì„ êµ¬í•˜ëŠ” í”„ë¡œê·¸ëž¨
+### ìž…ë ¥
+* ì²«ì§¸ ì¤„ì— ì–‘ì˜ ì •ìˆ˜ Nì´ ì£¼ì–´ì§„ë‹¤.
+* ì •ìˆ˜ Nì˜ ì œê³±ê·¼ì€ í•­ìƒ ì •ìˆ˜ì´ë©°, Nì˜ ê¸¸ì´ëŠ” 830ìžë¦¬ë¥¼ ë„˜ì§€ ì•ŠëŠ”ë‹¤.
+### ì¶œë ¥
+* ì²«ì§¸ ì¤„ì— ì •ìˆ˜ Nì˜ ì œê³±ê·¼ ì¶œë ¥
 
-Á¢±Ù ¹æ¹ý
+ì ‘ê·¼ ë°©ë²•
 -------------
-* Å½»ö -> ÀÌÁø Å½»ö
+* íƒìƒ‰ -> ì´ì§„ íƒìƒ‰
